// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`RankSummary ENCOURA theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiBox-root css-1varnae"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiTableContainer-root css-1jf92ft-MuiPaper-root-MuiTableContainer-root"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
    >
      <table
        class="MuiTable-root css-114y2c7-MuiTable-root"
      >
        <thead
          class="MuiTableHead-root css-1a7iywq-MuiTableHead-root"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-head css-w5nrrj-MuiTableRow-root"
          >
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall css-19nsumy-MuiTableCell-root"
              scope="col"
            >
              Rank Summary
            </th>
          </tr>
        </thead>
        <tbody
          class="MuiTableBody-root css-72ojop-MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root css-9gv7df-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-12k06vx-MuiTableCell-root"
            >
              1
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1n5h70k-MuiTableCell-root"
            >
              FAFSA
            </td>
          </tr>
          <tr
            class="MuiTableRow-root css-9gv7df-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-12k06vx-MuiTableCell-root"
            >
              2
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1n5h70k-MuiTableCell-root"
            >
              SAT Scores
            </td>
          </tr>
          <tr
            class="MuiTableRow-root css-9gv7df-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-12k06vx-MuiTableCell-root"
            >
              3
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1n5h70k-MuiTableCell-root"
            >
              Website Inquiry
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`RankSummary ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiBox-root css-1varnae"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiTableContainer-root css-1xs1tso-MuiPaper-root-MuiTableContainer-root"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
    >
      <table
        class="MuiTable-root css-k04ge3-MuiTable-root"
      >
        <thead
          class="MuiTableHead-root css-1a7iywq-MuiTableHead-root"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-head css-7o9wm2-MuiTableRow-root"
          >
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall css-1g1tq33-MuiTableCell-root"
              scope="col"
            >
              Rank Summary
            </th>
          </tr>
        </thead>
        <tbody
          class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root css-1g9wp8j-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1rru75m-MuiTableCell-root"
            >
              1
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-cqgu7o-MuiTableCell-root"
            >
              FAFSA
            </td>
          </tr>
          <tr
            class="MuiTableRow-root css-1g9wp8j-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1rru75m-MuiTableCell-root"
            >
              2
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-cqgu7o-MuiTableCell-root"
            >
              SAT Scores
            </td>
          </tr>
          <tr
            class="MuiTableRow-root css-1g9wp8j-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1rru75m-MuiTableCell-root"
            >
              3
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-cqgu7o-MuiTableCell-root"
            >
              Website Inquiry
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`RankSummary ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiBox-root css-1varnae"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation2 MuiTableContainer-root css-1wgvs2c-MuiPaper-root-MuiTableContainer-root"
      style="--Paper-shadow: 0px 0px 2px 0px rgba(79, 94, 113, 0.12), 0px 2px 4px 0px rgba(79, 94, 113, 0.11), 0px 4px 8px 0px rgba(79, 94, 113, 0.10);"
    >
      <table
        class="MuiTable-root css-1mups4w-MuiTable-root"
      >
        <thead
          class="MuiTableHead-root css-1a7iywq-MuiTableHead-root"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-head css-12muqxp-MuiTableRow-root"
          >
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall css-12v83ih-MuiTableCell-root"
              scope="col"
            >
              Rank Summary
            </th>
          </tr>
        </thead>
        <tbody
          class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root css-cz3a44-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1ms9n8d-MuiTableCell-root"
            >
              1
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-z4v2yh-MuiTableCell-root"
            >
              FAFSA
            </td>
          </tr>
          <tr
            class="MuiTableRow-root css-cz3a44-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1ms9n8d-MuiTableCell-root"
            >
              2
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-z4v2yh-MuiTableCell-root"
            >
              SAT Scores
            </td>
          </tr>
          <tr
            class="MuiTableRow-root css-cz3a44-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1ms9n8d-MuiTableCell-root"
            >
              3
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-z4v2yh-MuiTableCell-root"
            >
              Website Inquiry
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`RankSummary ENCOURAGE_E4E theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiBox-root css-1varnae"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiTableContainer-root css-s33f9-MuiPaper-root-MuiTableContainer-root"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
    >
      <table
        class="MuiTable-root css-1eivqx4-MuiTable-root"
      >
        <thead
          class="MuiTableHead-root css-1a7iywq-MuiTableHead-root"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-head css-9ym1b0-MuiTableRow-root"
          >
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall css-ek0oni-MuiTableCell-root"
              scope="col"
            >
              Rank Summary
            </th>
          </tr>
        </thead>
        <tbody
          class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root css-6alk54-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-17jq0xb-MuiTableCell-root"
            >
              1
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1iiljby-MuiTableCell-root"
            >
              FAFSA
            </td>
          </tr>
          <tr
            class="MuiTableRow-root css-6alk54-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-17jq0xb-MuiTableCell-root"
            >
              2
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1iiljby-MuiTableCell-root"
            >
              SAT Scores
            </td>
          </tr>
          <tr
            class="MuiTableRow-root css-6alk54-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-17jq0xb-MuiTableCell-root"
            >
              3
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1iiljby-MuiTableCell-root"
            >
              Website Inquiry
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
